# rubiks-cube

./: .gitignore  CMakeLists.txt
include/: Cube.hpp
src/: Cube.cpp  main.cpp
